# Fyshx

./: CMakeLists.txt
assets/: grid.fragment.glsl
src/: main.cpp
